config/namespace-class/internal-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: daochun-internal-network-policy
  namespace: daochun-internal
spec:
  podSelector:
    { }
  egress:
    - { }
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.100/32  # VPN IP address
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 8080
          protocol: TCP
  policyTypes:
    - Egress
    - Ingress
