config/namespace-class/public-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: daochun-public-network-policy
  namespace: daochun-public
spec:
  egress:
    - {}
  ingress:
    - {}
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
